<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.shamilov.payda.presentation.ui.donation.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.shamilov.payda.presentation.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile">
        <action
            android:id="@+id/actionProfileToAboutApp"
            app:destination="@id/aboutAppFragment"/>
        <action
            android:id="@+id/actionProfileToAssistance"
            app:destination="@id/assistanceFragment"/>
    </fragment>

    <fragment
        android:id="@+id/fundFragment"
        android:name="com.shamilov.payda.presentation.ui.fund.FundFragment"
        android:label="@string/title_fund"
        tools:layout="@layout/fragment_fund" />

    <fragment
        android:id="@+id/contactFragment"
        android:name="com.shamilov.payda.presentation.ui.feedback.ContactFragment"
        android:label="Send"
        tools:layout="@layout/fragment_contact" />

    <fragment
        android:id="@+id/aboutAppFragment"
        android:name="com.shamilov.payda.presentation.ui.about.AboutAppFragment"
        android:label="About"
        tools:layout="@layout/fragment_about_app" />

    <fragment
        android:id="@+id/assistanceFragment"
        android:name="com.shamilov.payda.presentation.ui.assistance.AssistanceFragment"
        android:label="Assistance"
        tools:layout="@layout/fragment_assistance" />
</navigation>
